# Flight-Booking-System

./: .eslintrc.json  .gitignore  .npmrc  .prettierignore  AGENTS.md  PROJECT.md  TEST_INFRA.md  TEST_READY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  tsconfig.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/agent/: .env.example  package.json  pyproject.toml
apps/agent/src/agent/: config.py  main.py
apps/agent/src/agent/agents/: chat_agent.py
apps/agent/src/agent/guardrails/: base.py  nemo.py
apps/agent/src/agent/memory/: __init__.py  manager.py
apps/agent/src/agent/middleware/: auth.py  rate_limit.py
apps/agent/src/agent/models/: __init__.py  requests.py
apps/agent/src/agent/queue/: __init__.py  message_queue.py
apps/agent/src/agent/streaming/: sse.py
apps/agent/src/agent/tools/: nestjs_client.py
apps/agent/tests/: conftest.py  test_auth.py  test_config.py  test_guardrails.py  test_health.py  test_memory.py  test_nestjs_client.py  test_queue.py  test_streaming_agent.py  test_streaming_foundation.py
apps/api/: .env.example  .eslintrc.json  jest.config.json  package.json  tsconfig.json
apps/web/: .env.example  .eslintrc.json  (+3 more)
context/: architecture.md  code-standards.md  library-docs.md  progress-checker.md  project-overview.md  ui-rules.md  workflow.md
research/: agent-tool-calling-architecture.md  chatbot-backend-architecture.md  decision-boundaries.md  tech-stack-decisions.md
(+105 files in other folders)
